New features part 1

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,10 +25,16 @@
               <%= link_to 'Cursos', courses_path, class: 'nav-link' %>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Professores</a>
+                <%= link_to 'Professores', professors_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+                <%= link_to 'Disciplinas', disciplines_path, class: 'nav-link' %>
+            </li>
+            <li class="nav-item">
+                <%= link_to 'Inscrição', enrollments_path, class: 'nav-link' %>
             </li>
           </ul>
-        
+
         </nav>
         <%= yield %>
     </div>
