--- a/app/views/courses/_form.html.erb
+++ b/app/views/courses/_form.html.erb
@@ -13,6 +13,6 @@
     </div>
     <div class="form-group">
         <%= f.submit "Salvar", class: "btn btn-primary" %>
-        <%= link_to "Voltar", course_path, class: "btn btn-primary" %>
+        <%= link_to "Voltar", courses_path, class: "btn btn-primary" %>
     </div>
 <% end %>
