--- a/app/views/professors/index.html.erb
+++ b/app/views/professors/index.html.erb
@@ -1,6 +1,6 @@
 <div class="card">
     <div class="card-header bg-default">
-        <div><h2>Estudantes</h2></div>
+        <div><h2>Professores</h2></div>
     </div>
     <div class="card-body">
         <table class="table">
@@ -9,18 +9,18 @@
                     <th>Nome</th><th>Data nascimento</th><th>Sexo</th>
                 </tr>
             </thead>
-            <% @students.each do |student| %>
+            <% @professors.each do |professor| %>
                 <tr>
                     <td>
-                        <%= link_to student.fullname, student %>
+                        <%= link_to professor.name, professor %>
                     </td>
-                    <td><%= date_ptbr(student.birth) %></td>
-                    <td><%= student.sex == 'M' ? 'Masculino' : 'Feminino' %></td>
+                    <td><%= professor.birth %></td>
+                    <td><%= professor.sex == 'M' ? 'Masculino' : 'Feminino' %></td>
                 </tr>
             <% end %>
         </table>
     </div>
     <div class="card-footer">
-        <%= link_to 'Adicionar', new_student_path, class: "btn btn-primary" %>
+        <%= link_to 'Adicionar', new_professor_path, class: "btn btn-primary" %>
     </div>
 </div>
