--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -3,12 +3,13 @@
         <h3><%= @course.title %></h3>
     </div>
     <div class="card-body">
-        <p><Strong>Duração: </Strong><%= @course.duration %></p>
-        <p><strong>Ativo: </strong><%= @course.active %></p>
+        <p><Strong>Duração: </Strong><%= @course.duration %> Meses</p>
+        <p><strong>Ativo: </strong><%= @course.active ? 'Sim' : 'Não' %></p>
     </div>
     <div class="card-footer">
         <%= link_to "Editar", edit_course_path, class: "btn btn-info" %>
         <%= link_to "Voltar", courses_path, class: "btn btn-info" %>
         <%= link_to "Deletar", course_path, method: :delete, data: { confirm: "Deletar?"}, class: "btn btn-danger" %>
+        <%= link_to "Disciplinas", disciplines_path(:course => @course.title), class: "btn btn-warning" %>
     </div>
 </div>
