--- a/app/views/enrollments/_form.html.erb
+++ b/app/views/enrollments/_form.html.erb
@@ -1,17 +1,18 @@
 <%= form_for @enrollment, html: {class: "form"} do |f| %>
-    <div class="form-group">
-        <%= f.label "Curso" %>
-        <%= f.select :course_id, options_for_select(Course.all.map{|c|[c.title, c.id]}) ,{}, class: "form-control" %>
-    </div>
-    <div class="form-group">
-        <%= f.label "Estudante" %>
-        <%= f.text_field :student_fullname, value: @student.fullname,  class: "form-control" %>
-    </div>
-    <div class="form-group">
-        <%= f.hidden_field :student_id, value: @student.id,  class: "form-control" %>
-    </div>
-    <div class="form-group">
-        <%= f.submit "Salvar", class: "btn btn-primary" %>
-        <%= link_to "Voltar", enrollments_path, class: "btn btn-primary" %>
-    </div>
+  <div class="form-group">
+      <%= f.label "Estudante" %>
+      <%= f.text_field :student_fullname, value: @student.fullname,:disabled => true, class: "form-control" %>
+  </div>
+  <div class="form-group">
+      <%= f.label "Curso" %>
+      <%= f.select :course_id, options_for_select(Course.all.map{|c|[c.title, c.id]}) ,{}, class: "form-control" %>
+  </div>
+
+  <div class="form-group">
+      <%= f.hidden_field :student_id, value: @student.id,  class: "form-control" %>
+  </div>
+  <div class="form-group">
+      <%= f.submit "Salvar", class: "btn btn-primary" %>
+      <%= link_to "Voltar", enrollments_path, class: "btn btn-primary" %>
+  </div>
 <% end %>
