--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,26 +13,16 @@
     <div class="container">
         <div class="jumbotron">
           <h1>Dashboard Estudantil</h1>
+          <% if logged_in? %>
+          <span class="float-left">
+            Bem-vindo, <%= link_to current_user.name, current_user %>
+          </span>
+        <% end %>
         </div>
-        <nav class="navbar navbar-expand-sm bg-light">
-
-          <!-- Links -->
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <%= link_to 'Estudantes', students_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-              <%= link_to 'Cursos', courses_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-                <%= link_to 'Professores', professors_path, class: 'nav-link' %>
-            </li>
-            <li class="nav-item">
-                <%= link_to 'Inscrição', enrollments_path, class: 'nav-link' %>
-            </li>
-          </ul>
-
-        </nav>
+        <%= render 'partials/menu' %>
+        <% flash.each do |message_type, message| %>
+          <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <% end %>
         <%= yield %>
     </div>
   </body>
